syntax = "proto3";

option csharp_namespace = "Indy.Agent.Messages";

message CredentialOfferRequest {
    string credential_definition_id = 1;
}

message CredentialOfferResponse {
    string credential_offer_json = 1;
}

message CredentialRequest {
    string credential_offer_json = 1;
    string credential_request_json = 2;
    string credential_values_json = 3;
}

message CredentialResponse {
}

message CredentialIssuanceRequest {
    string credential_offer_json = 1;
    string credential_request_json = 2;
    string credential_values_json = 3;
}

message CredentialIssuanceResponse {
    string credential_json = 1;
    string revocation_id = 2;
}